# xscraper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  qml.qrc  xscraper.pro
.github/workflows/: release.yml
assets/: app-icon.icns
qml/: Chip.qml  Field.qml  FlatButton.qml  Main.qml  Theme.qml  qmldir
src/: main.cpp
src/app/: ScrapeController.cpp  ScrapeController.h
